examples/errors/bogus-include.gr
#include "bogus"

foo : Int
foo = 0
